[gd_scene load_steps=8 format=3 uid="uid://byglfntbnqm7u"]

[ext_resource type="PackedScene" uid="uid://4oxn8kgr3ed7" path="res://modeles3d/mortierpilon.glb" id="1_fjbiw"]
[ext_resource type="Texture2D" uid="uid://c0opy3beyrttp" path="res://images/textures/Concrete039_4K-JPG_Color.jpg" id="2_864ex"]
[ext_resource type="Script" path="res://scenes/item/mortierpilon.gd" id="2_aoa2f"]
[ext_resource type="AudioStream" uid="uid://bnxoi6jqjteen" path="res://sons/log-split-88986.wav" id="4_ocqtu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_884jn"]
albedo_texture = ExtResource("2_864ex")
metallic = 0.97
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vfuwp"]
height = 1.34957
radius = 1.46688

[sub_resource type="CylinderShape3D" id="CylinderShape3D_g0i5y"]
height = 1.54804
radius = 1.59306

[node name="mortierpilon" groups=["prehensible"] instance=ExtResource("1_fjbiw")]
transform = Transform3D(0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0, 0.00279201, 0)
script = ExtResource("2_aoa2f")

[node name="Sph√®re" parent="." index="0"]
material_override = SubResource("StandardMaterial3D_884jn")

[node name="Cylindre" parent="." index="1"]
material_override = SubResource("StandardMaterial3D_884jn")

[node name="interaction_area" type="Area3D" parent="." index="2" groups=["prehensible"]]
collision_mask = 0

[node name="interaction_form" type="CollisionShape3D" parent="interaction_area" index="0" groups=["prehensible"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.52202e-06, 0.503428, -1.52588e-05)
shape = SubResource("CylinderShape3D_vfuwp")

[node name="Mortier & pilon" type="StaticBody3D" parent="." index="3" groups=["prehensible"]]
collision_layer = 8

[node name="body_collision2" type="CollisionShape3D" parent="Mortier & pilon" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00151316, 0.534864, -0.000808716)
shape = SubResource("CylinderShape3D_g0i5y")

[node name="audio_pick" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("4_ocqtu")
pitch_scale = 0.5

[node name="Timer" type="Timer" parent="." index="5"]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
